; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_keyboard.c_sway_keyboard_disarm_key_repeat.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_keyboard.c_sway_keyboard_disarm_key_repeat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_keyboard = type { i32, i32* }

@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"failed to disarm key repeat timer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sway_keyboard_disarm_key_repeat(%struct.sway_keyboard* %0) #0 {
  %2 = alloca %struct.sway_keyboard*, align 8
  store %struct.sway_keyboard* %0, %struct.sway_keyboard** %2, align 8
  %3 = load %struct.sway_keyboard*, %struct.sway_keyboard** %2, align 8
  %4 = icmp ne %struct.sway_keyboard* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %17

6:                                                ; preds = %1
  %7 = load %struct.sway_keyboard*, %struct.sway_keyboard** %2, align 8
  %8 = getelementptr inbounds %struct.sway_keyboard, %struct.sway_keyboard* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.sway_keyboard*, %struct.sway_keyboard** %2, align 8
  %10 = getelementptr inbounds %struct.sway_keyboard, %struct.sway_keyboard* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i64 @wl_event_source_timer_update(i32 %11, i32 0)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %6
  %15 = load i32, i32* @SWAY_DEBUG, align 4
  %16 = call i32 @sway_log(i32 %15, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %5, %14, %6
  ret void
}

declare dso_local i64 @wl_event_source_timer_update(i32, i32) #1

declare dso_local i32 @sway_log(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
